testsuite/poke.pkl/mod-integers-diag-1.pk
/* { dg-do compile } */

var x = 100 % (10 - 10);  /* { dg-error "" } */
